--- a/theoretical.html
+++ b/theoretical.html
@@ -2,17 +2,21 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-	<head>
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Battle of WaterLOD</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"
+	/>
 	<meta name="author" content="FreeHTML5.co" />
 
-  <!-- 
+	<!-- 
 	//////////////////////////////////////////////////////
 
 	FREE HTML5 TEMPLATE 
@@ -26,12 +30,12 @@
 	//////////////////////////////////////////////////////
 	 -->
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -42,7 +46,7 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -57,7 +61,8 @@
 	<!--Google Fonts-->
 	<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
 	<!--Font awesome-->
-	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
+	  crossorigin="anonymous"></script>
 
 
 
@@ -68,29 +73,66 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
+</head>
+
+<body>
 	<div id="fh5co-page">
-		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
+		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle">
+			<i></i>
+		</a>
 		<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
 
-			<h1 id="fh5co-logo"><a href="index.html"><img src="images/logo.png" alt="Free HTML5 Bootstrap Website Template"></a></h1>
+			<h1 id="fh5co-logo">
+				<a href="index.html">
+					<img src="images/logo.png" alt="Free HTML5 Bootstrap Website Template">
+				</a>
+			</h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li class="fh5co-active"><a href="about.html">Project</a></li>
-					<li><a href="#">Browse data</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+					<li class="fh5co-active">
+						<a href="about.html">Project</a>
+					</li>
+					<li>
+						<a href="#">Browse data</a>
+					</li>
+					<li>
+						<a href="contact.html">Contact</a>
+					</li>
 				</ul>
 			</nav>
 
 			<div class="fh5co-footer">
-				<p><small>Site Map | Policy | Contact</span> <span>Latest modification April 2018</span> <span>Blog | Newsletter</span> <span>Copyright Creative Commons</span></small></p>
+				<p>
+					<small>Site Map | Policy | Contact</span>
+						<span>Latest modification April 2018</span>
+						<span>Blog | Newsletter</span>
+						<span>Copyright Creative Commons</span>
+					</small>
+				</p>
 				<ul>
-					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+					<li>
+						<a href="#">
+							<i class="icon-facebook"></i>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="icon-twitter"></i>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="icon-instagram"></i>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="icon-linkedin"></i>
+						</a>
+					</li>
 				</ul>
 			</div>
 
@@ -101,82 +143,149 @@
 				<div class="fh5co-narrow-content">
 					<nav aria-label="breadcrumb">
 						<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a href="about.html#workflow">Project - Workflow</a></li>
+							<li class="breadcrumb-item">
+								<a href="about.html#workflow">Project - Workflow</a>
+							</li>
 							<li class="breadcrumb-item active" aria-current="page">Theoretical model</li>
 						</ol>
 					</nav>
 					<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft" id="top">
-					Theoretical model
+						Theoretical model
 					</h2>
 					<div>
 						<p class="animate-box">The theoretical model is able to describe the chosen items replying to the questions:
 							<ul class="animate-box">
-								<li><strong><a href="#who">WHO</a></strong> – people. How to describe people? Which kind of information?</li>
-								<li><strong><a href="#where">WHERE</a></strong> – places. Which kind of information I have to represent about locations?</li>
-								<li><strong><a href="#when">WHEN</a></strong> – dates. In which format I need to express the notion of time?</li>
-								<li><strong><a href="#what">WHAT</a></strong> – subjects/concepts. What is the main content of my object?</li>
+								<li>
+									<strong>
+										<a href="#who">WHO</a>
+									</strong> – people. How to describe people? Which kind of information?</li>
+								<li>
+									<strong>
+										<a href="#where">WHERE</a>
+									</strong> – places. Which kind of information I have to represent about locations?</li>
+								<li>
+									<strong>
+										<a href="#when">WHEN</a>
+									</strong> – dates. In which format I need to express the notion of time?</li>
+								<li>
+									<strong>
+										<a href="#what">WHAT</a>
+									</strong> – subjects/concepts. What is the main content of my object?</li>
 							</ul>
-						</br>
+							</br>
 					</div>
 					<div>
 						<h3 class="animate-box" id="who">Who (people)</h3>
-							<p class="animate-box">Here the main problem is to explicitly declare the different roles of a single person that, in turn, can be viewed as single person, family or corporate body. Anyway, a single "person" can be referred as "the creator", "the user" or "the owner" of an item. For these reasons we think that <mark style="background-color: #cc0000; opacity:0.8; color:white;">EAC-CPF</mark> and  <mark style="background-color: #cc0000; opacity:0.8; color:white;">FOAF</mark> can be used for our purposes.
-							</br>			
-							Our thoughs started with  <mark style="background-color: #cc0000; opacity:0.8; color:white;">FOAF</mark>: Friend Of A Friend Ontology, we have some useful properties to describe real people (eg: Napoleone Bonaparte) and some useful general information about the person. It answers to some basic questions like: "What is the gender?" and other questions that aim to get the personal information of a person. But in our case we need informations about entities, not only real person.
-							</br>			
-							 <mark style="background-color: #cc0000; opacity:0.8; color:white;">EAC-CPF</mark> is very useful in order to differentiate the three main types of people but the most important thing is the role that a person has in relation of the item. Using EAC-CPF we can overpass this lack and add a very useful information (eg: here the questions are "What is the role of this person, releated to the item?" or "Is this person the owner of the item? If yes, what kind of owner is it?"). So, the way is to use EAC-CPF.</p>
-							<p class="animate-box">Go back to the <a href="#top">questions</a></p>
+						<p class="animate-box">Here the main problem is to explicitly declare the different roles of a single person that, in turn, can be viewed
+							as single person, family or corporate body. Anyway, a single "person" can be referred as "the creator", "the user"
+							or "the owner" of an item. For these reasons we think that
+							<mark style="background-color: #cc0000; opacity:0.8; color:white;">EAC-CPF</mark> and
+							<mark style="background-color: #cc0000; opacity:0.8; color:white;">FOAF</mark> can be used for our purposes.</p>
+
+						<p class="animate-box">Our thoughs were start with
+							<mark style="background-color: #cc0000; opacity:0.8; color:white;">FOAF: Friend Of A Friend Ontology</mark>, we have some useful properties to describe real people (eg: Napoleone Bonaparte)
+							and some useful general information about the person. It answer to some basic questions like: "
+							<i>What is the gender?</i>" and other questions that aim to get the personal information of a person. But in our case
+							we need informations about entities, not only real person, so we choose not to use FOAF.</p>
+
+						<p class="animate-box">
+							<mark style="background-color: #cc0000; opacity:0.8; color:white;">EAC-CPF</mark>, from the archival context, is very useful in order to differentiate the three main types of but the
+							most important thing is the role that a person has in relation of the item. Using EAC-CPF we can overpass this lack
+							and add a very useful information (eg: here the questions are "
+							<i>What is the role of this person, releated to the item?</i>" or "
+							<i>Is this person the owner of the item? If yes, what kind of owner is it?</i>"). So, the way is to use
+							<mark style="background-color: #cc0000; opacity:0.8; color:white;">EAC-CPF</mark>.</p>
+						<p class="animate-box">Go back to the
+							<a href="#top">questions</a>
+						</p>
 
 						</br>
-						
+
 						<h3 class="animate-box" id="where">Where (places)</h3>
-							<p class="animate-box">In our model the idea of a place is quite simple. For our purposes we need just some minor information about a place to represent it with a name (or alternative names eg: Waterloo in French, Waterlô in Wallon), a country (represented as a country code eg: IT for Italy, FR for France) and finally the couple of latitude and longitude. All of these needs can be handled using the  <mark style="background-color: #cc0000; opacity:0.8; color:white;">GeoNames Ontology</mark>. The choice to use GeoNames is pushed mainly because it is more a De Facto standard.</p>
-							<p class="animate-box">Go back to the <a href="#top">questions</a></p>
+						<p class="animate-box">In our model the idea of a place is quite simple. For our purposes we need just some minor information about a place
+							to represent it with a name (or alternative names eg: Waterloo in French, Waterlô in Wallon), a country (represented
+							as a country code eg: IT for Italy, FR for France) and finally the couple of latitude and longitude. All of these
+							needs can be handled using the
+							<mark style="background-color: #cc0000; opacity:0.8; color:white;">GeoNames Ontology</mark>. The choice to use GeoNames is pushed mainly because it is more a De Facto standard.</p>
+						<p class="animate-box">Go back to the
+							<a href="#top">questions</a>
+						</p>
 
 						</br>
 
-							<h3 class="animate-box" id="when">When (dates)</h3>
-							<p class="animate-box">For what concern the dates, the only question that we posed ourself is: "In which format I need to express the notion of time?". Starting from this point we posed another question i.e. "Do we need the notion of time? Or we just need the notion of date?".
-							</br>
-							Because our idea is cataloged under an historical theme, we do not care about the time, we cannot even find the time on the web (eg we cannot answer to the question "At what time in the morning the Battle of Waterloo has started?"), so our focus is just on dates. The format we need is defined by the <mark style="background-color: #cc0000; opacity:0.8; color:white;">w3Consortium</mark> under the  <mark style="background-color: #cc0000; opacity:0.8; color:white;">Date and Time formats</mark>, and in particular the format ​DD/MM/YYYY proper of Italy.</p>
-							<p class="animate-box">Go back to the <a href="#top">questions</a></p>
+						<h3 class="animate-box" id="when">When (dates)</h3>
+						<p class="animate-box">For what concern the dates, the only question that we posed ourself is: "
+							<i>In which format I need to express the notion of time?</i>". Starting from this point we posed another question i.e.
+							"
+							<i>Do we need the notion of time? Or we just need the notion of date?</i>".
+						</p>
+						<p>
+							Because our idea is cataloged under an historical theme, we do not care about the time, we cannot even find the time on the
+							web (eg we cannot answer to the question "At what time in the morning the Battle of Waterloo has started?"), so our
+							focus is just on dates. The format we need is defined by the
+							<mark style="background-color: #cc0000; opacity:0.8; color:white;">w3Consortium</mark> under the
+							<mark style="background-color: #cc0000; opacity:0.8; color:white;">Date and Time formats</mark>, and in particular the format ​DD/MM/YYYY proper of Italy.</p>
+						<p class="animate-box">Go back to the
+							<a href="#top">questions</a>
+						</p>
 
 						</br>
 
-							<h3 class="animate-box" id="what">What (subject/concept)</h3>
-							<p class="animate-box">Of course, our model has to describe the subject/concept proper of an item. Our mission, here, is to describe the item and the concept expressed by the item itself. We raised some questions on this matter, starting from "What is the name of the current object?", "What is the language is which it is described?", "What type of object is this?" or "What is the content/concept that is represented by means of this object?".
-							</br>
-							Some of these questions are general and fully handled with the  <mark style="background-color: #cc0000; opacity:0.8; color:white;">Dublin Core Metadata Initiative</mark>. This standard is the most used because: it is the most functional, its properties are very general and it grants a very high level of abstraction. If we have to describe concepts, and we are unable to do it using Dublin Core (eg: the event associated to an item, because EDM can be both event or object centric) we have preferred the Europeana Data Model i.e. the standard proposed by Europeana itself. EDM, in turn, uses DC to extend its properties, because some of the EDM properties are sub-properties of the DC ones.</p>
-							<p class="animate-box">Go back to the <a href="#top">questions</a></p> 
+						<h3 class="animate-box" id="what">What (subject/concept)</h3>
+						<p class="animate-box">
+							The first question we raised is: "what we want to describe?" and we tought that the best way to do it, is to describe the
+							concept related to the item. Of course, our model has also to describe the subject/concept proper of an item. Our
+							mission, here, is to describe the item and the concept expressed by the item itself. We raised some questions on this
+							matter, starting from "What is the name of the concept?", "What type of entity is this?", "What is the subject or
+							theme of item?" or "in which category the concept belongs?" (<mark style="background-color: #cc0000; opacity:0.8; color:white;">(General belongsToCategory Army</mark>).
+						</p>
+						<p>
+							Some of these questions are general and fully handled with the <mark style="background-color: #cc0000; opacity:0.8; color:white;">Dublin Core Metadata Initiative</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">RDF(S)</mark>. The <mark style="background-color: #cc0000; opacity:0.8; color:white;">DC</mark> standard
+							is the most used because: it is the most functional, its properties are very general and it grants a very high level
+							of abstraction. <mark style="background-color: #cc0000; opacity:0.8; color:white;">SKOS</mark> is a standard that easily define what exaclty is a concept, so we adopted it in order to give
+							the right definition of concept. <mark style="background-color: #cc0000; opacity:0.8; color:white;">CIDOC-CRM</mark> is the best way to describe, in a general way, people linked to the concept.
+							FOAF, instead, allows us to introduce how a concept find its material representation (following the idea of <mark style="background-color: #cc0000; opacity:0.8; color:white;">DBPedia</mark>).
+						</p>
+						<p class="animate-box">Go back to the
+							<a href="#top">questions</a>
+						</p>
 					</div>
-				</br>
+					</br>
 					<nav aria-label="...">
 						<ul class="pager">
-							<li class="previous"><a href="metadata.html"><span aria-hidden="true">&larr;</span> Metadata standards alignement</a></li>
-    						<li class="next"><a href="conceptual.html">Conceptual model <span aria-hidden="true">&rarr;</span></a></li>
-  						</ul>
+							<li class="previous">
+								<a href="metadata.html">
+									<span aria-hidden="true">&larr;</span> Metadata standards alignement</a>
+							</li>
+							<li class="next">
+								<a href="conceptual.html">Conceptual model
+									<span aria-hidden="true">&rarr;</span>
+								</a>
+							</li>
+						</ul>
 					</nav>
 				</div>
 			</div>
- 
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Carousel -->
-	<script src="js/owl.carousel.min.js"></script>
-	<!-- Stellar -->
-	<script src="js/jquery.stellar.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Counters -->
-	<script src="js/jquery.countTo.js"></script>
-	
-	
-	<!-- MAIN JS -->
-	<script src="js/main.js"></script>
 
-	</body>
+			<!-- jQuery -->
+			<script src="js/jquery.min.js"></script>
+			<!-- jQuery Easing -->
+			<script src="js/jquery.easing.1.3.js"></script>
+			<!-- Bootstrap -->
+			<script src="js/bootstrap.min.js"></script>
+			<!-- Carousel -->
+			<script src="js/owl.carousel.min.js"></script>
+			<!-- Stellar -->
+			<script src="js/jquery.stellar.min.js"></script>
+			<!-- Waypoints -->
+			<script src="js/jquery.waypoints.min.js"></script>
+			<!-- Counters -->
+			<script src="js/jquery.countTo.js"></script>
+
+
+			<!-- MAIN JS -->
+			<script src="js/main.js"></script>
+
+</body>
+
 </html>
