Conceptual model fixed

--- a/theoretical.html
+++ b/theoretical.html
@@ -219,7 +219,7 @@
 							"
 							<i>Do we need the notion of time? Or we just need the notion of date?</i>".
 						</p>
-						<p>
+						<p class="animate-box">
 							Because our idea is cataloged under an historical theme, we do not care about the time, we cannot even find the time on the
 							web (eg we cannot answer to the question "At what time in the morning the Battle of Waterloo has started?"), so our
 							focus is just on dates. The format we need is defined by the
@@ -239,7 +239,7 @@
 							matter, starting from "What is the name of the concept?", "What type of entity is this?", "What is the subject or
 							theme of item?" or "in which category the concept belongs?" (<mark style="background-color: #cc0000; opacity:0.8; color:white;">(General belongsToCategory Army</mark>).
 						</p>
-						<p>
+						<p class="animate-box">
 							Some of these questions are general and fully handled with the <mark style="background-color: #cc0000; opacity:0.8; color:white;">Dublin Core Metadata Initiative</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">RDF(S)</mark>. The <mark style="background-color: #cc0000; opacity:0.8; color:white;">DC</mark> standard
 							is the most used because: it is the most functional, its properties are very general and it grants a very high level
 							of abstraction. <mark style="background-color: #cc0000; opacity:0.8; color:white;">SKOS</mark> is a standard that easily define what exaclty is a concept, so we adopted it in order to give
