--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
 					<div class="col-md-5">
 						<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">Project</h2>
 						<p class="fh5co-lead animate-box" data-animate-effect="fadeInLeft">Knowledge Organization and Digital Methods in the Cultural Heritage Domain</p>
-						<p class="animate-box" data-animate-effect="fadeInLeft">The idea is to select arguments from a Wikipedia page: a person, a place, a concept and a date. We have chosen the Wikipedia page of <a href="https://en.wikipedia.org/wiki/Battle_of_Waterloo" alt="Battle of Waterloo Wikipedia page" target="_blank">Battle of Waterloo</a>. Our idea involves Napoleone Bonaparte as person, Waterloo as place, Defeat as concept and 1815 as Date. For each of them, we have collected different kinds of items (archival documents, bibliographic entries and artifacts). After describing them adopting some metadata standards, we have created connections between them and to other external resources.</p>
+						<p class="animate-box" data-animate-effect="fadeInLeft">The idea is to select arguments from a Wikipedia page: a person, a place, a concept and a date. We have chosen the Wikipedia page of <a href="https://en.wikipedia.org/wiki/Battle_of_Waterloo" alt="Battle of Waterloo Wikipedia page" target="_blank">Battle of Waterloo</a>. Our idea involves Napoleone Bonaparte as person, Waterloo as place, Defeat as concept and 1815 as Date. For each of them, we have collected different kinds of items (archival documents, bibliographic entries and artifacts). After describing People, Place and Concept/Subject related to items adopting some metadata standards, we have created connections between them and to other external resources.</p>
 						<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the full-version of the <a target="_blank" href="report/index.html">report</a> here.</span></p>
 					</div>
 					<div class="col-md-6 col-md-push-1 animate-box" data-animate-effect="fadeInLeft">
@@ -114,7 +114,7 @@
 
 			<div class="fh5co-narrow-content fh5co-border-bottom">
 				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft" id="workflow">Workflow</h2>
-				<h3 class="animate-box" data-animate-effect="fadeInLeft">Planning and designing</h3>
+				<h3 class="animate-box" data-animate-effect="fadeInLeft">Part 1) Planning and designing</h3>
 				<div class="row">
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
@@ -177,7 +177,7 @@
 			</div>
 
 			<div class="fh5co-narrow-content">
-				<h3 class="animate-box" data-animate-effect="fadeInLeft">Putting into practice and coding</h3>
+				<h3 class="animate-box" data-animate-effect="fadeInLeft">Part 2) Putting into practice and coding</h3>
 				<div class="row">
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
