--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 					<a href="index.html" alt="Homepage"><img src="images/title.jpg"></a>
 					</h2>
 					<div>
-						<p class="fh5co animate-box">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+						<p class="fh5co animate-box">The aim of Battle of the WaterLOD Project is to create an abstract Linked Open model for describing items related to the battle of Waterloo.</p>
 						<hr class="my-4 fh5co animate-box">
-						<p class="fh5co animate-box">It uses utility classes for typography and spacing to space content out within the larger container.</p>
+						<p class="fh5co animate-box"></p>
 						<img src="images/background.jpg" style="width:100%" class="fh5co-heading animate-box img-responsive">
 					</br>
 				
@@ -121,27 +121,27 @@
 					<div class="owl-carousel-fullwidth animate-box" data-animate-effect="fadeInLeft">
 		            <div class="item">
 		            	<figure>
-		            		<img src="images/testimonial_person2.jpg" alt="Free HTML5 Bootstrap Template">
+		            		<i class="fas fa-database" style="font-size:48px;"></i>
 		            	</figure>
-		              	<p class="text-center quote">Reuse and creation of ontologies<cite class="author">&mdash; Ferdinand A. Porsche</cite></p>
+		              	<p class="text-center quote">Reuse of metadata standards and ontologies</p>
 		            </div>
 		            <div class="item">
 		            	<figure>
-		            		<img src="images/testimonial_person3.jpg" alt="Free HTML5 Bootstrap Template">
+		            		<i class="fas fa-share-alt" style="font-size:100px;"></i>
 		            	</figure>
-		              	<p class="text-center quote">Converting DB data into RDF according to the ontologies<cite class="author">&mdash; Steve Jobs</cite></p>
+		              	<p class="text-center quote">Converting data into RDF according to the ontologies</p>
 		            </div>
 		            <div class="item">
 		            	<figure>
-		            		<img src="images/testimonial_person4.jpg" alt="Free HTML5 Bootstrap Template">
+		            		<i class="fas fa-cloud" style="font-size:100px;"></i>
 		            	</figure>
-		              	<p class="text-center quote">Add links to the LOD cloud<cite class="author">&mdash; Frank Chimero</cite></p>
+		              	<p class="text-center quote">Add links to the LOD cloud</p>
 		            </div>
 		            <div class="item">
 		            	<figure>
-		            		<img src="images/testimonial_person4.jpg" alt="Free HTML5 Bootstrap Template">
+		            		<i class="fas fa-laptop" style="font-size:100px;"></i>
 		            	</figure>
-		              	<p class="text-center quote">A responsive website based on a public user interface for browsing RDF data<cite class="author">&mdash; Frank Chimero</cite></p>
+		              	<p class="text-center quote">A responsive website based on a public user interface for browsing RDF data</p>
 		            </div>
 		          </div>
 				</div>
