Added missing link in table "describe entities"

--- a/report/index.html
+++ b/report/index.html
@@ -215,22 +215,22 @@ xmlns:foaf="http://xmlns.com/foaf/0.1/"</code><code></code></pre>
 
 <tr>
 <th>Item</th>
-<th>Who</th>
-<th>What</th>
-<th>Where</th>
+<th>Person</th>
+<th>Subject/Concept</th>
+<th>Place</th>
 </tr>
 <tr>
 <td>
 <p><strong>Letter of surrender</strong></p>
 </td>
 <td>
-<p>Napoleon</p>
+<p><a href="https://drive.google.com/open?id=1NXKYs8QR5E9NUCl6ZKlqdvSoD-kzm0HI1zfQ29Qn-VI" rel="noopener">Napoleon</a></p>
 </td>
 <td>
-<p>Surrender</p>
+<p><a href="https://drive.google.com/open?id=1oHfEMYRcaBkACAE1LWlb9rMsV41J5RqODjY2rrOy7U4" rel="noopener">Surrender</a></p>
 </td>
 <td>
-<p>Rochefort</p>
+<p><a href="https://drive.google.com/open?id=1bOfDuHm7VGgk-9-JthLQ-ffgvs4hknHxT-l5GvVy5_Y" rel="noopener">Rochefort</a></p>
 </td>
 </tr>
 <tr>
@@ -238,13 +238,13 @@ xmlns:foaf="http://xmlns.com/foaf/0.1/"</code><code></code></pre>
 <p><strong>Chapeau</strong></p>
 </td>
 <td>
-<p>Napoleon</p>
+<p><a href="https://drive.google.com/open?id=1NXKYs8QR5E9NUCl6ZKlqdvSoD-kzm0HI1zfQ29Qn-VI" rel="noopener">Napoleon</a></p>
 </td>
 <td>
-<p>General</p>
+<p><a href="https://drive.google.com/open?id=1qVLGhaYMfchE07QyTiohIpyQalfUJPOS9KOABkR4ll4" rel="noopener">General</a></p>
 </td>
 <td>
-<p>Waterloo</p>
+<p><a href="https://drive.google.com/open?id=1qvqJ8_gEJ6n1yBs2buv_QImiaH8X9vDSopZMy-YRu_s" rel="noopener">Waterloo</a></p>
 </td>
 </tr>
 <tr>
@@ -252,18 +252,18 @@ xmlns:foaf="http://xmlns.com/foaf/0.1/"</code><code></code></pre>
 <p><strong>Armour</strong></p>
 </td>
 <td>
-<p>Fauveau</p>
+<p><a href="https://drive.google.com/open?id=157zGwVMniBPsgByjtSOkqPTI9dskdNXN_qWpflXU9jw" rel="noopener">Fauveau</a></p>
 </td>
 <td>
-<p>Killed</p>
+<p><a href="https://drive.google.com/open?id=12ANii8D_wQt73A4cR4t5Or479al53wV3-Bz3JVrF-t0" rel="noopener">Killed</a></p>
 </td>
 <td>
-<p>Waterloo</p>
+<p><a href="https://drive.google.com/open?id=1qvqJ8_gEJ6n1yBs2buv_QImiaH8X9vDSopZMy-YRu_s" rel="noopener">Waterloo</a></p>
 </td>
 </tr>
 
 </table>
-<figcaption>Caption.</figcaption>
+<figcaption>The items stored in this table are devided in three categories.</figcaption>
 </figure>
 <section id="section22">
 <section id="section23"></section>
